objects/Date__c.object
<CustomObject>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CREATEDDATE_old__c</fullName>
        <description>old creation date</description>
        <label>CREATEDDATE_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Stage__c</fullName>
        <formula>TEXT( Claim__r.Stage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Fall</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Termine</relationshipLabel>
        <relationshipName>Termine</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Kommentar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Court_Reference__c</fullName>
        <formula>Claim__r.Court_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gerichtliches Aktenzeichen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termin bestätigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Kunde__c</fullName>
        <label>Email Kunde</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>Ende</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Follow_up_Period__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Warnzeitraum vor Termin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Hash_1__c</fullName>
        <label>Form Hash 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anwalt</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Termine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_RepresentativeConfirmationDate__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/ConfirmAppointment?token=' + Token__c,'Link zum Terminsvertreter Bestätigungslink','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link Terminsvertreter Bestätigungslink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Court_Customer__c</fullName>
        <formula>Claim__r.Court_Customer__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ort Gericht des Kunden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Court__c</fullName>
        <formula>Claim__r.Court__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ort Gericht des Gegners</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Ort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Terminsvertreter__c</fullName>
        <formula>Representative__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Terminsvertreter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Termin_ID__c</fullName>
        <label>Old Termin ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Claim__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Claim__r.Opportunity__r.Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representative_Confirmation_Date__c</fullName>
        <label>Bestätigungsdatum des Terminsvertreters</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Representative_Confirmation_Link__c</fullName>
        <formula>IF(Form_Hash_1__c != null,IF(Claim__r.Opportunity__r.Account_Id__c = '0010Y00000eCUS9','http://form.verbraucherhilfe24.de/terminsbestaetigung-001/' + Form_Hash_1__c,'https://forms.cloudworx.agency/verbraucherrechte24/terminsbestaetigung-001/' + Form_Hash_1__c),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLD Terminsvertreter Bestätigungslink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representative__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Terminsvertreter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Termine</relationshipLabel>
        <relationshipName>Termine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_Mail_Flag_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Mail Flag 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Mail_Flag_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Mail Flag 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Date_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Beginn</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Bezeichnung</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerminImpID__c</fullName>
        <description>import ID</description>
        <externalId>true</externalId>
        <label>TerminImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminprotokoll__c</fullName>
        <label>Terminprotokoll</label>
        <summaryForeignKey>Date_Record__c.Date__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Web form token</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Typ</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Date_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_RepresentativeConfirmationDate__c</fullName>
        <formula>$Label.SiteRoot + '/ConfirmAppointment?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Terminsvertreter Bestätigungslink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2ndEmailtoContactSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2ndEmailtoContactSent</label>
        <type>Checkbox</type>
    </fields>
    <label>Termin</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Termine</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Claim__c</columns>
        <columns>NAME</columns>
        <columns>Legal__c</columns>
        <columns>Date__c</columns>
        <columns>Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Location_Court__c</columns>
        <columns>Location_Court_Customer__c</columns>
        <columns>Court_Reference__c</columns>
        <columns>Follow_up_Period__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Gerichtstermine_N_rberg</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>Claim__c</columns>
        <columns>NAME</columns>
        <columns>Legal__c</columns>
        <columns>Date__c</columns>
        <columns>Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Location_Court__c</columns>
        <columns>Location_Court_Customer__c</columns>
        <columns>Follow_up_Period__c</columns>
        <columns>Court_Reference__c</columns>
        <columns>Subject__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Gerichtstermin</value>
        </filters>
        <filters>
            <field>Location_Court_Customer__c</field>
            <operation>contains</operation>
            <value>Nürnberg</value>
        </filters>
        <filters>
            <field>Location_Court__c</field>
            <operation>contains</operation>
            <value>Nürnberg</value>
        </filters>
        <label>Gerichtstermine Nürnberg</label>
    </listViews>
</CustomObject>